--- a/blogsubindex.html
+++ b/blogsubindex.html
@@ -12,7 +12,7 @@
 <div class="column_1">
   <div class="header1"><h2>Culture</h2></div>
   <ul>
-    <li><a href=http://creativisionist.github.io/blog/c1-chefs-kitchen.html>February 6, 2015 | Computers & the Chemistry of Cookery: Or, my reflection on DBC after one week</a></li>
+    <li><a href=http://creativisionist.github.io/blog/c1-chefs-kitchen.html>February 6, 2015 | Computers & the Chemistry of Cookery</a></li>
   </ul>
 </div>
 
